assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature_list feature

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID ':' TYPEID optional_assign ';'
   10        | error ';'

   11 formal_list: %empty
   12            | formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expression_list1: %empty
   16                 | expression
   17                 | expression_list1 ',' expression

   18 expression_list2: expression ';'
   19                 | expression_list2 expression ';'
   20                 | error ';'

   21 expression: OBJECTID ASSIGN expression
   22           | expression '.' OBJECTID '(' expression_list1 ')'
   23           | expression '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   24           | OBJECTID '(' expression_list1 ')'
   25           | IF expression THEN expression ELSE expression FI
   26           | WHILE expression LOOP expression POOL
   27           | '{' expression_list2 '}'
   28           | LET let
   29           | CASE expression OF case_list ESAC
   30           | NEW TYPEID
   31           | ISVOID expression
   32           | expression '+' expression
   33           | expression '-' expression
   34           | expression '*' expression
   35           | expression '/' expression
   36           | '~' expression
   37           | expression '<' expression
   38           | expression LE expression
   39           | expression '=' expression
   40           | NOT expression
   41           | '(' expression ')'
   42           | OBJECTID
   43           | INT_CONST
   44           | STR_CONST
   45           | BOOL_CONST

   46 let: OBJECTID ':' TYPEID optional_assign IN expression
   47    | OBJECTID ':' TYPEID optional_assign ',' let
   48    | error IN expression
   49    | error ',' let

   50 case_list: case
   51          | case_list case

   52 case: OBJECTID ':' TYPEID DARROW expression ';'

   53 optional_assign: %empty
   54                | ASSIGN expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 22 23 24 41
    ')' (41) 8 22 23 24 41
    '*' (42) 34
    '+' (43) 32
    ',' (44) 13 17 47 49
    '-' (45) 33
    '.' (46) 22 23
    '/' (47) 35
    ':' (58) 8 9 14 46 47 52
    ';' (59) 4 5 8 9 10 18 19 20 52
    '<' (60) 37
    '=' (61) 39
    '@' (64) 23
    '{' (123) 4 5 8 27
    '}' (125) 4 5 8 27
    '~' (126) 36
    error (256) 10 20 48 49
    CLASS (258) 4 5
    ELSE (259) 25
    FI (260) 25
    IF (261) 25
    IN (262) 46 48
    INHERITS (263) 5
    LET (264) 28
    LOOP (265) 26
    POOL (266) 26
    THEN (267) 25
    WHILE (268) 26
    CASE (269) 29
    ESAC (270) 29
    OF (271) 29
    DARROW (272) 52
    NEW (273) 30
    ISVOID (274) 31
    STR_CONST <symbol> (275) 44
    INT_CONST <symbol> (276) 43
    BOOL_CONST <boolean> (277) 45
    TYPEID <symbol> (278) 4 5 8 9 14 23 30 46 47 52
    OBJECTID <symbol> (279) 8 9 14 21 22 23 24 42 46 47 52
    ASSIGN (280) 21 54
    NOT (281) 40
    LE (282) 38
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5
        on right: 2 3
    feature_list <features> (50)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (51)
        on left: 8 9 10
        on right: 7
    formal_list <formals> (52)
        on left: 11 12 13
        on right: 8 13
    formal <formal> (53)
        on left: 14
        on right: 12 13
    expression_list1 <expressions> (54)
        on left: 15 16 17
        on right: 17 22 23 24
    expression_list2 <expressions> (55)
        on left: 18 19 20
        on right: 19 27
    expression <expression> (56)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 8 16 17 18 19 21 22 23 25 26 29 31 32 33 34 35 36 37 38 39 40 41 46 48 52 54
    let <expression> (57)
        on left: 46 47 48 49
        on right: 28 47 49
    case_list <cases> (58)
        on left: 50 51
        on right: 29 51
    case <case_> (59)
        on left: 52
        on right: 50 51
    optional_assign <expression> (60)
        on left: 53 54
        on right: 9 46 47


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature  go to state 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 17


State 13

   10 feature: error . ';'

    ';'  shift, and go to state 18


State 14

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID . ':' TYPEID optional_assign ';'

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 21


State 16

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    feature  go to state 16


State 18

   10 feature: error ';' .

    $default  reduce using rule 10 (feature)


State 19

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 11 (formal_list)

    formal_list  go to state 24
    formal       go to state 25


State 20

    9 feature: OBJECTID ':' . TYPEID optional_assign ';'

    TYPEID  shift, and go to state 26


State 21

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 27


State 23

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


State 24

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


State 25

   12 formal_list: formal .

    $default  reduce using rule 12 (formal_list)


State 26

    9 feature: OBJECTID ':' TYPEID . optional_assign ';'

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 53 (optional_assign)

    optional_assign  go to state 32


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 28

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


State 29

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 34


State 30

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 35


State 31

   54 optional_assign: ASSIGN . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 50


State 32

    9 feature: OBJECTID ':' TYPEID optional_assign . ';'

    ';'  shift, and go to state 51


State 33

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 34

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 52


State 35

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


State 36

   25 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 53


State 37

   28 expression: LET . let

    error     shift, and go to state 54
    OBJECTID  shift, and go to state 55

    let  go to state 56


State 38

   26 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 57


State 39

   29 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 58


State 40

   30 expression: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 41

   31 expression: ISVOID . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 60


State 42

   44 expression: STR_CONST .

    $default  reduce using rule 44 (expression)


State 43

   43 expression: INT_CONST .

    $default  reduce using rule 43 (expression)


State 44

   45 expression: BOOL_CONST .

    $default  reduce using rule 45 (expression)


State 45

   21 expression: OBJECTID . ASSIGN expression
   24           | OBJECTID . '(' expression_list1 ')'
   42           | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 42 (expression)


State 46

   40 expression: NOT . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 63


State 47

   36 expression: '~' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 64


State 48

   27 expression: '{' . expression_list2 '}'

    error       shift, and go to state 65
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression_list2  go to state 66
    expression        go to state 67


State 49

   41 expression: '(' . expression ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 68


State 50

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression
   54 optional_assign: ASSIGN expression .

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 54 (optional_assign)


State 51

    9 feature: OBJECTID ':' TYPEID optional_assign ';' .

    $default  reduce using rule 9 (feature)


State 52

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 78


State 53

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   25           | IF expression . THEN expression ELSE expression FI
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    THEN  shift, and go to state 79
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 54

   48 let: error . IN expression
   49    | error . ',' let

    IN   shift, and go to state 80
    ','  shift, and go to state 81


State 55

   46 let: OBJECTID . ':' TYPEID optional_assign IN expression
   47    | OBJECTID . ':' TYPEID optional_assign ',' let

    ':'  shift, and go to state 82


State 56

   28 expression: LET let .

    $default  reduce using rule 28 (expression)


State 57

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   26           | WHILE expression . LOOP expression POOL
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    LOOP  shift, and go to state 83
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 58

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   29           | CASE expression . OF case_list ESAC
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    OF   shift, and go to state 84
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 59

   30 expression: NEW TYPEID .

    $default  reduce using rule 30 (expression)


State 60

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   31           | ISVOID expression .
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 31 (expression)


State 61

   21 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 85


State 62

   24 expression: OBJECTID '(' . expression_list1 ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    $default  reduce using rule 15 (expression_list1)

    expression_list1  go to state 86
    expression        go to state 87


State 63

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression
   40           | NOT expression .

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 40 (expression)


State 64

   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   36           | '~' expression .
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 36 (expression)


State 65

   20 expression_list2: error . ';'

    ';'  shift, and go to state 88


State 66

   19 expression_list2: expression_list2 . expression ';'
   27 expression: '{' expression_list2 . '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '}'         shift, and go to state 89
    '('         shift, and go to state 49

    expression  go to state 90


State 67

   18 expression_list2: expression . ';'
   22 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   23           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   32           | expression . '+' expression
   33           | expression . '-' expression
   34           | expression . '*' expression
   35           | expression . '/' expression
   37           | expression . '<' expression
   38           | expression . LE expression
   39           | expression . '=' expression

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    ';'  shift, and go to state 91


State 68
